fix: product detail 320 overflow issue

--- a/src/scss/pages/productDetail.scss
+++ b/src/scss/pages/productDetail.scss
@@ -158,6 +158,7 @@
                 flex-direction: column;
                 min-width: fit-content;
                 width: 60%;
+                max-width: calc(100% - 1px);
                 @include media($sm) {
                   flex-grow: 1;
                 }
